[gd_scene load_steps=6 format=3 uid="uid://68n18miki2yv"]

[ext_resource type="Script" path="res://Mainmenu/main_menu.gd" id="1_gf7u5"]
[ext_resource type="Texture2D" uid="uid://bvt66pjfas68b" path="res://Assets/teste.jpg" id="2_x4pob"]

[sub_resource type="SystemFont" id="SystemFont_6v10g"]
font_names = PackedStringArray("Soccer League College")
subpixel_positioning = 0
oversampling = 10.0

[sub_resource type="SystemFont" id="SystemFont_c3qrm"]
font_names = PackedStringArray("Impact")
oversampling = 10.0

[sub_resource type="SystemFont" id="SystemFont_mcbro"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0
oversampling = 10.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gf7u5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_x4pob")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = SubResource("SystemFont_6v10g")
theme_override_font_sizes/font_size = 40
text = "GAME TITLE"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = SubResource("SystemFont_c3qrm")
text = "UTFPR 2023"
horizontal_alignment = 1

[node name="Separator9" type="Control" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Separator6" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator8" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator7" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 10)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_mcbro")
theme_override_font_sizes/font_size = 12
text = "Jogar"

[node name="TutorialButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 10)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_mcbro")
theme_override_font_sizes/font_size = 12
text = "Controles"

[node name="CreditsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 10)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_mcbro")
theme_override_font_sizes/font_size = 12
text = "Creditos"

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 10)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_mcbro")
theme_override_font_sizes/font_size = 12
text = "Sair"
